fix: changes in swagger
